/**
 * Created by Jaap van Gestel <18139027@student.hhs.nl> on 9-9-2019
 */
public interface Speler {
    Zet bepaalVolgendeZet(Speelveld speelveld);
}
